feat(order): 订单核销功能重构及多店铺支持
- 将订单表中的shopId字段改为可使用店铺ID列表，新增verifyShopId存储实际核销门店
- 实现订单核销时验证门店权限，确保只有授权门店可进行核销操作
- 添加用户与店铺关联关系管理，支持按用户权限查询相关店铺数据
- 更新订单查询逻辑，普通用户只能查看自己店铺相关的订单数据
- 修改订单核销接口参数，统一使用verifyShopId作为核销门店标识
- 优化店铺销量统计，基于实际核销门店ID进行销量累加和回退操作
- 扩展商品查询功能，支持按用户权限过滤可管理的商品列表
- 增加系统API接口，提供用户店铺关系管理和查询功能
- 重构订单查询权限控制，集成安全工具类进行用户身份验证
- 添加店铺审核状态字段，完善店铺数据模型结构